--- a/netdisk/src/main/webapp/index.html
+++ b/netdisk/src/main/webapp/index.html
@@ -7,9 +7,9 @@
 <!--    <meta http-equiv="Pragma" content="no-cache"/>-->
 <!--    <meta http-equiv="Expires" content="0"/>-->
 <!--    <meta http-equiv="Expires" content="0">-->
-<!--    <meta http-equiv="Pragma" content="no-cache">-->
-<!--    <meta http-equiv="Cache-control" content="no-cache">-->
-<!--    <meta http-equiv="Cache" content="no-cache">-->
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Cache" content="no-cache">
 
     <title>我的个人网盘</title>
     <link rel="icon" href="img/favicon.ico">
@@ -69,6 +69,9 @@
         <el-descriptions-item v-if="menu_visible.personalize" label="个性化工具">
             <el-button @click="editPersonalize()">个性化设置</el-button>
             <el-button @click="editUserInfo()">编辑个人信息</el-button>
+        </el-descriptions-item>
+        <el-descriptions-item v-if="menu_visible.document_tools" label="实用工具">
+            <el-button @click="online_doc()">在线文档</el-button>
         </el-descriptions-item>
         <el-descriptions-item v-if="mode=='share'" label="分享模式工具">
             <el-button-group>
@@ -460,6 +463,8 @@
             menu_visible: {
                 // 个性化设置
                 personalize: true,
+                // 文档实用工具
+                document_tools: true,
                 file_menu: 1,
                 file_menu_word: [{
                     'upload': '',
@@ -1471,6 +1476,10 @@
                 }
                 this.folderView.path = path.substring(0, index + 1)
                 this.openFolder(this.folderView.path)
+            },
+            // 打开在线文档页面
+            online_doc(){
+                window.open("online_doc.html", "_blank")
             },
             reverseJSON(theJSON) {
                 var len = theJSON.length
