--- a/netdisk/src/main/webapp/upload.html
+++ b/netdisk/src/main/webapp/upload.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <!--禁用缓存-->
-<!--    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>-->
-<!--    <meta http-equiv="Pragma" content="no-cache"/>-->
-<!--    <meta http-equiv="Expires" content="0"/>-->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate"/>
+    <meta http-equiv="Pragma" content="no-cache"/>
+    <meta http-equiv="Expires" content="0"/>
     <title>文件上传</title>
     <link rel="stylesheet" type="text/css" href="css/elementUI.css"/>
     <script src="js/vue.js" type="text/javascript" charset="utf-8"></script>
