--- a/netdisk/src/main/webapp/online_doc.html
+++ b/netdisk/src/main/webapp/online_doc.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache"/>
     <meta http-equiv="Expires" content="0"/>
 
-    <title>登录</title>
+    <title>在线编辑文档</title>
     <link rel="icon" href="img/favicon.ico">
     <script src="js/axios.min.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="css/index.css"/>
@@ -25,6 +25,16 @@
             font-family: "微软雅黑", serif;
         }
 
+        /*
+            用于鼠标点击文件名进行预览
+         */
+        .fileClick {
+            cursor: pointer;
+        }
+
+        .fileClick:hover {
+            color: #1890ff;
+        }
 
         .content {
             width: 90%;
@@ -35,7 +45,7 @@
 <body>
 <div id="app">
     <hgroup>
-        <h2 style="display: inline-block">用户名：{{username}} 昵称：{{userinfo.nickname}} 的在线文档</h2>
+        <h2 style="display: inline-block">用户名：{{username}} 昵称：{{userinfo.nickname}} 的云{{mode=='doc'?'文档':'文件'}}</h2>
 
         <div style="float: right">
 
@@ -60,7 +70,7 @@
     <el-descriptions title="" :column="1" border>
         <el-descriptions-item label="文档实用工具">
             <el-button type="primary" @click="_create" plain>新建文档</el-button>
-            <el-button type="primary" @click="_export" plain>导出文档</el-button>
+<!--            <el-button type="primary" @click="_export" plain>导出文档</el-button>-->
             <el-button type="primary" @click="_import" plain>导入文档</el-button>
             <el-button type="primary" @click="_save" plain>保存文档</el-button>
         </el-descriptions-item>
@@ -72,7 +82,7 @@
                 @input="content_change"
                 type="textarea"
                 placeholder="请输入内容"
-                maxlength="100000"
+                maxlength="20000"
                 show-word-limit
                 resize="both"
                 :autosize="{ minRows: 25, maxRows: 80}"
@@ -80,6 +90,28 @@
         </el-input>
         </el-input>
     </div>
+
+    <!-- 云文档预览 -->
+    <el-dialog title="云文档预览" :visible.sync="dialogTableVisible1">
+        <el-table :data="doc_view" :row-key="row => { return row.id }">
+            <el-table-column property="title" label="云文档标题">
+                <template slot-scope="scope">
+                    <!-- 鼠标点击名称进入该文件夹 -->
+                    <div class="fileClick" @click="get_doc_content(scope.row.id)">
+                        {{ scope.row.title }}
+                    </div>
+                </template>
+            </el-table-column>
+            <el-table-column property="updateTime" label="修改日期" width="300"
+            ></el-table-column>
+            <el-table-column label="操作" width="50">
+                <template slot-scope="scope">
+                    <el-button type="text" @click="delete_doc(scope.row.id)">删除</el-button>
+                </template>
+            </el-table-column>
+        </el-table>
+
+    </el-dialog>
 </div>
 </body>
 <script>
@@ -88,6 +120,7 @@
         el: '#app',
         //初始化数据
         data: {
+            mode: 'doc', // 工作模式 doc 云文档模式，file 云文件模式
             username: '',
             tableData: [],
             userinfo: {},
@@ -112,7 +145,12 @@
                 content: null,
                 create_time: null,
                 update_time: null,
-            }
+            },
+            // 所有云文档摘要预览
+            doc_view: [],
+            // 界面显示
+            dialogTableVisible1: false,
+            dialogTableVisible2: false,
         },
         created: function () {
             this.tableData = new Array()
@@ -182,30 +220,38 @@
                         return message
                     })
 
+                    // 检测模式，如果localstorage中存有待编辑的的文档，则打开这个文档
+                    var doc_id = localStorage.getItem('edit_file_id')
+                    if (doc_id != null) {
+                        // 移除这个storage
+                        localStorage.removeItem('edit_file_id')
+                        that.mode = 'file'
+                        that.get_doc_content(doc_id)
+
+                    }
+
                     // 设置定时器，自动检测文档的同步状态
                     setInterval(function () {
-                        console.log('自动检测文档的同步状态定时器',"this.change = "+that.change)
                         if (that.change == true) {
                             // 设为未修改
                             that.change = false
                             // 设为未同步
                             that.sync_status = 1
-
                         }
                     }, 2000)
 
                     // 设置定时器，自动同步文档
                     setInterval(function () {
-                        console.log('正在执行自动同步文档定时任务')
                         var socket = that.ws
                         if (that.sync_status == 1 && socket != null && socket.readyState === 1) {
                             that.sync_status = 2
                             var obj = {'id': that.doc.id}
+                            if (that.mode=='file')
+                                obj['type'] = 'file'
                             obj['content'] = that.textarea
                             socket.send(JSON.stringify(obj))
                         }
                     }, 8000)
-
                 }
             )
 
@@ -266,9 +312,7 @@
                             this.doc = info.resData.onlinedoc
                             console.log(this.doc)
                             this.$message.success("云文档创建成功")
-                            if (this.textarea!=null){
-                                this._save()
-                            }
+                            this._save()
                         } else {
                             this.$message.error(info.msg)
                             console.error(info)
@@ -278,8 +322,51 @@
             },
             // 导入文档
             _import() {
-
+                this.dialogTableVisible1 = true
+                axios.get('./onlinedoc/get/list?username=' + this.username).then(res => {
+                    var info = res.data
+                    if (info.code == 200) {
+                        this.doc_view = info.resData.onlinedocs
+                    } else {
+                        this.$message.error(info.msg)
+                        console.error(info)
+                    }
+                })
             },
+            // 获取云文档内容
+            get_doc_content(id) {
+                this.dialogTableVisible1 = false
+                var url
+                if (this.mode == 'doc') {
+                    url = './onlinedoc/get/content?id=' + id
+                } else {
+                    url = "./onlinefile/get?id=" + id
+                }
+                axios.get(url).then(res => {
+                    var info = res.data
+                    if (info.code == 200) {
+                        var content = info.resData.onlinedoc.content
+                        this.textarea = content
+                        this.doc = info.resData.onlinedoc
+                        this.change = false
+                        // 刚导入文档是，同步状态为无需同步
+                        this.sync_status = 0
+                        this.$message.success("导入成功")
+                        this._save()
+
+                        // 检查字数是否超过上限
+                        console.log(this.doc.content.length)
+                        if (this.doc.content.length >= 20000) {
+                            alert("文档字数超过预设上限！可能会导致与服务器断开连接等无法保存的异常。")
+                        }
+
+                    } else {
+                        this.$message.error(info.msg)
+                        console.error(info)
+                    }
+                })
+            },
+
             // 导出文档
             _export() {
 
@@ -314,7 +401,7 @@
                 };
                 socket.onmessage = msg => {
                     this.$message.info(msg.data)
-                    if (msg.data==='文档内容已同步'){
+                    if (msg.data === '文档内容已同步') {
                         // 标记为已同步
                         this.sync_status = 3
                     }
@@ -329,6 +416,46 @@
             },
             content_change() {
                 this.change = true
+            },
+            // 删除文档
+            delete_doc(id) {
+                this.dialogTableVisible1 = false
+                this.$confirm('此操作将永久删除该文档, 是否继续?', '提示', {
+                    confirmButtonText: '确定',
+                    cancelButtonText: '取消',
+                    type: 'warning'
+                }).then(() => {
+                    var params = new URLSearchParams()
+                    params.append('id', id)
+                    params.append('username', this.username)
+                    axios.post('./onlinedoc/delete', params).then(res => {
+                        var info = res.data
+                        if (info.code == 200) {
+                            this.$message.success("删除成功")
+                            // 如果删除的文档id与当前编辑的文档id相同
+                            if (id == this.doc.id) {
+                                this.doc = {
+                                    id: null,
+                                    title: '尚未选择',
+                                    content: null,
+                                    create_time: null,
+                                    update_time: null,
+                                }
+                                this.textarea = ''
+                                this.change = false
+                                this.sync_status = 0
+                            }
+                        } else {
+                            this.$message.error(info.msg)
+                            console.error(info)
+                        }
+                    })
+                }).catch(() => {
+                    this.$message({
+                        type: 'info',
+                        message: '已取消删除'
+                    });
+                });
             },
             dateFormat(fmt, date) {
                 let ret;
@@ -349,7 +476,6 @@
                 }
                 return fmt;
             },
-
         }
     })
 
