--- a/netdisk/src/main/webapp/index.html
+++ b/netdisk/src/main/webapp/index.html
@@ -587,6 +587,8 @@
                             confirmButtonText: '确定',
                             cancelButtonText: '取消'
                         }).then(({value}) => {
+                            if (value == null)
+                                value = ''
                             window.location.assign('index.html?share_id=' + share_id + '&code=' + value)
                         }).catch(() => {
                             this.$message({
@@ -989,7 +991,7 @@
                 }
                 // 格式化文件大小
                 for (let data of this.tableData) {
-                    console.log(data.type != 'folder',data.size)
+                    console.log(data.type != 'folder', data.size)
                     if (data.type != 'folder')
                         data['small'] = data.size <= 51200;
                     if (data.size != undefined)
@@ -1328,10 +1330,10 @@
                 });
             },
             // 打开在线编辑
-            openOnlineEditor(id){
+            openOnlineEditor(id) {
                 console.log(id)
-                localStorage.setItem("edit_file_id",id)
-                window.open("./online_doc.html","_blank")
+                localStorage.setItem("edit_file_id", id)
+                window.open("./online_doc.html", "_blank")
             },
             dateFormat(fmt, date) {
                 let ret;
